crates/alder-parse/src/snapshots/alder_parse__statement__tests__continue_.snap
---
source: crates/alder-parse/src/statement.rs
description: continue
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
    value: Continue,
}
