crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_assert_value.snap
---
source: crates/alder-parse/src/statement.rs
description: "assert \"x"
---
Assert(
    String(
        Endless,
        1,
        10,
    ),
    1,
    8,
)
