crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_assign_op_on_next_line.snap
---
source: crates/alder-parse/src/statement.rs
description: "{\n    x\n    = 1\n}\n"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 1,
        },
        boundary: Position {
            line: 2,
            column: 6,
        },
        unexpected: Position {
            line: 3,
            column: 5,
        },
    },
)
