crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_assign_target.snap
---
source: crates/alder-parse/src/statement.rs
description: foo() = 1
---
AssignTarget(
    Set,
    1,
    1,
)
