crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_assign_target_slash_equals.snap
---
source: crates/alder-parse/src/statement.rs
description: foo() /= 1
---
AssignTarget(
    Div,
    1,
    1,
)
