crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_break_value.snap
---
source: crates/alder-parse/src/statement.rs
description: break )
---
Break(
    Start(
        1,
        7,
    ),
    1,
    7,
)
