crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_close_paren_same_line.snap
---
source: crates/alder-parse/src/statement.rs
description: "{ let x = 1 )"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 1,
        },
        boundary: Position {
            line: 1,
            column: 12,
        },
        unexpected: Position {
            line: 1,
            column: 13,
        },
    },
)
