crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_close_paren_stmt_start.snap
---
source: crates/alder-parse/src/statement.rs
description: "{ )"
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 1,
        },
        boundary: Position {
            line: 1,
            column: 2,
        },
        unexpected: Position {
            line: 1,
            column: 3,
        },
    },
)
