crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_for_missing_in.snap
---
source: crates/alder-parse/src/statement.rs
description: "for item of items { }"
---
For(
    In(
        1,
        10,
    ),
    1,
    1,
)
