crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_let_missing_equals.snap
---
source: crates/alder-parse/src/statement.rs
description: let x 1
---
Let(
    Equals(
        1,
        7,
    ),
    1,
    1,
)
