crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_provide_body.snap
---
source: crates/alder-parse/src/statement.rs
description: provide Db = db
---
Provide(
    Body(
        Open(
            1,
            16,
        ),
        1,
        16,
    ),
    1,
    1,
)
